ASM 3.0 have been replaced by ASM-3.1